--- a/habittracker/src/components/MonthButtons.css
+++ b/habittracker/src/components/MonthButtons.css
@@ -1,12 +1,11 @@
 
 button{
-  margin-top: 20px;
+  margin-top: 6%;
   border: 10px;
   outline: 0;
   padding: 3px;
   background-color: transparent;
-  width: 100px;
-  
+  width: 30%;
   transition: all 0.4s;
 }
 
