--- a/habittracker/src/components/MonthButtons.css
+++ b/habittracker/src/components/MonthButtons.css
@@ -1,15 +1,16 @@
 
-button{
-  margin-top: 6%;
+.button{
+  margin-top: 2%;
+  margin-bottom: 2%;
   border: 10px;
   outline: 0;
-  padding: 3px;
+  padding: 7px;
   background-color: transparent;
-  width: 30%;
+  width: 25%;
   transition: all 0.4s;
 }
 
-button:hover{
+.button:hover{
   background-color: #e3d5ca;
   border-radius: 10%;
  
