--- a/habittracker/src/components/MonthsCalander.css
+++ b/habittracker/src/components/MonthsCalander.css
@@ -1,7 +1,7 @@
 .months{
   text-align: center;
-  width: 300px;
-  height: 12em;
+  width: 400px;
+  height: 11rem;
   background-color: transparent;
   border: 1px solid black;
   display: inline-block;
@@ -10,6 +10,6 @@
 }
 .month_title{
   border-bottom: 1px solid black;
-  margin: auto;
+  padding: 2%;
 }
 
