--- a/src/components/table/TodoItemTable.module.css
+++ b/src/components/table/TodoItemTable.module.css
@@ -1,15 +1,15 @@
-#habitTable {
+.habitTable {
   margin: 5%;
   border: 1px solid black;
   border-collapse: collapse;
   justify-content: center;
 }
 
-th{
+.th{
   border: 1px solid black;
 }
 
-td {
+.td {
   border: 1px solid black;
   width: 40px;
   padding: 12px;
@@ -21,3 +21,16 @@ td {
   padding: 40%;
   background-color: #e3d5ca;
 }
+
+.habitInput {
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  height: 100%;
+  
+}
+
+.habitInput:focus{
+  outline: none;
+}
+
