Redesigning Month Buttons and adding useState

--- a/src/components/MonthButtons.module.css
+++ b/src/components/MonthButtons.module.css
@@ -10,8 +10,13 @@
   transition: all 0.4s;
 }
 
+.button.selected{
+  background-color: #d6ccc2;
+  border-radius: 60px;
+}
+
 .button:hover{
   background-color: #e3d5ca;
-  border-radius: 10%;
+  border-radius: 30px;
  
 }
